# linuxfb_lvgl_demo

./: CMakeLists.txt  README.md  lv_conf.h  main.c
inc/: gui.h  linux_stat.h  mqtt.h  net.h  stock.h  thread.h  weather.h  weather_station.h
src/: gui.c  gui_dev.c  gui_linux.c  gui_main.c  gui_predict.c  gui_stock.c  gui_weather.c  gui_weather_station.c  linux_stat.c  mqtt.c  net.c  net.cpp  stock.c  thread_base.c  weather.c  weather_station.c
